<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/set_select_sex_Rl"
    android:layout_width="match_parent"
    
    android:layout_height="match_parent" >

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <Button
            style="@style/set_sex_head_btn"
            android:layout_marginTop="8.0dip"
            android:onClick="setSelectSexManBtn"
            android:text="@string/man" />

        <Button
            android:id="@+id/doctorimgfromcamera"
            style="@style/set_sex_head_btn"
            android:layout_marginTop="8.0dip"
            android:onClick="setSelectSexWomenBtn"
            android:text="@string/women" />

        <Button
            android:id="@+id/doctor_select_exit"
            style="@style/set_sex_head_btn"
            android:layout_marginBottom="8.0dip"
            android:layout_marginTop="8.0dip"
            android:onClick="setSelectSexCancelBtn"
            android:text="@string/quxiao" />
    </LinearLayout>

</RelativeLayout>