<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <include layout="@layout/top_bar_back" />

    <EditText
        android:id="@+id/register_input_phone_et"
        style="@style/edit_text_hint"
        android:layout_width="match_parent"
        android:layout_height="62dip"
        android:layout_marginTop="32dip"
        android:background="@drawable/input_phone_bg"
        android:ems="10"
        android:hint="@string/intput_phone"
        android:inputType="phone"
        android:paddingLeft="40dip" >
    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dip"
        android:layout_marginRight="28dip"
        android:layout_marginTop="27dip"
        android:background="@drawable/bt_press"
        android:onClick="registerInputPhoneNextBtn"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:layout_marginTop="16dip"
        android:text="@string/phone_hint"
        android:textColor="@color/edit_hint"
        android:textSize="12sp" />

</LinearLayout>