<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_topic_part_ll"
    android:layout_width="match_parent"
    android:layout_height="81.0dip"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal" >

    <ImageView
        android:layout_width="61dip"
        android:layout_height="61dip"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="16dip"
        android:background="@drawable/ic_huati"
        android:clickable="false"
        android:contentDescription="@string/app_name"
        android:focusable="false" />

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_marginLeft="8.0dip"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/huati"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4.0dip"
            android:text="@string/listen"
            android:textColor="@color/title_hint"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="9dip"
        android:layout_height="16dip"
        android:layout_gravity="center"
        android:layout_marginRight="16dip"
        android:clickable="false"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_arrow_right" />

</LinearLayout>