<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </FrameLayout>

    <include layout="@layout/partingline_bottom_part" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@color/white"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/index_bottom_community_rl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/index_bottom_community_iv"
                    style="@style/index_bottom_img"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_home_normal" />

                <TextView
                    android:id="@+id/index_bottom_community_tv"
                    style="@style/index_bottom_text"
                    android:text="@string/home"
                    android:textSize="13sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/index_bottom_bageshuo_rl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/index_bottom_bageshuo_iv"
                    style="@style/index_bottom_img"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_chat_normal" />

                <TextView
                    android:id="@+id/index_bottom_bageshuo_tv"
                    style="@style/index_bottom_text"
                    android:text="@string/bageshuo" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/index_bottom_find_rl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/index_bottom_find_iv"
                    style="@style/index_bottom_img"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_detect_normal" />

                <TextView
                    android:id="@+id/index_bottom_find_tv"
                    style="@style/index_bottom_text"
                    android:text="@string/find" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/index_bottom_friend_rl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/index_bottom_friend_iv"
                    style="@style/index_bottom_img"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_tabbar_settings_normal" />

                <TextView
                    android:id="@+id/index_bottom_friend_tv"
                    style="@style/index_bottom_text"
                    android:text="@string/friend" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>