<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <include layout="@layout/top_bar_back" />

    <TextView
        android:id="@+id/register_verigication_hint_tv"
        style="@style/text_hint"
        android:layout_width="match_parent"
        android:layout_height="29dip"
        android:layout_marginBottom="4.0dip"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <include layout="@layout/partingline_part" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dip"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/register_verivation_et"
                style="@style/edit_text_hint"
                android:layout_width="0.0dip"
                android:layout_height="44dip"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/pleaseinputverfivation"
                android:inputType="numberPassword"
                android:paddingLeft="26dip" />

            <LinearLayout
                android:layout_width="1dip"
                android:layout_height="44dip"
                android:background="@color/huatiandperson"
                android:orientation="horizontal" >
            </LinearLayout>

            <Button
                android:id="@+id/register_verivation_again_btn"
                android:layout_width="0.0dip"
                android:layout_height="44dip"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:onClick="RegisterVerivationAgainTv"
                android:text="@string/getverification"
                android:textColor="@color/index_color"
                android:textSize="16sp" />
        </LinearLayout>

        <include layout="@layout/partingline_part" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dip" >

            <EditText
                android:id="@+id/register_verivation_password_et"
                style="@style/edit_text_hint"
                android:layout_width="match_parent"
                android:layout_height="44dip"
                android:layout_marginLeft="26dip"
                android:background="@null"
                android:ems="10"
                android:hint="@string/setpasswoed"
                android:inputType="numberPassword" />
        </LinearLayout>

        <include layout="@layout/partingline_part" />
    </LinearLayout>

    <Button
        style="@style/text_hint"
        android:layout_width="match_parent"
        android:layout_height="44dip"
        android:layout_marginLeft="28dip"
        android:layout_marginRight="28dip"
        android:layout_marginTop="28dip"
        android:background="@drawable/bt_press"
        android:onClick="registerVerigicationNextBtn"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>